@startuml
class Question {
    name: CharField
    description: TextField
}

class Category {
    name: CharField
}

class Difficulty {
    name: CharField
}

class Test {
    input: JSONField
    expected: JSONField
}

Test --|> Question: fk
Question --|> Category: fk
Question --|> Difficulty: fk
@enduml